bash scripts (automation) & some refactors